Fix: Optimizing Auto Code