@@ -4,10 +4,8 @@ import edu.wpi.first.math.controller.PIDController;
 import edu.wpi.first.math.controller.ProfiledPIDController;
 import edu.wpi.first.math.geometry.Pose2d;
 import edu.wpi.first.math.geometry.Rotation2d;
-import edu.wpi.first.math.geometry.Translation2d;
 import edu.wpi.first.math.trajectory.Trajectory;
 import edu.wpi.first.math.trajectory.TrajectoryGenerator;
-import edu.wpi.first.wpilibj.Timer;
 import edu.wpi.first.wpilibj.smartdashboard.Field2d;
 import edu.wpi.first.wpilibj.smartdashboard.SmartDashboard;
 import edu.wpi.first.wpilibj2.command.InstantCommand;
@@ -18,12 +16,12 @@ import frc.robot.Constants.AutoConstants;
 import frc.robot.Constants.DriveConstants;
 import frc.robot.subsystems.SwerveSubsystem;
 
-import java.util.List;
+import java.util.Arrays;
 
 
-public class GoStraightAndSpin extends SequentialCommandGroup {
+public class GoStraight extends SequentialCommandGroup {
 
-    public GoStraightAndSpin(SwerveSubsystem m_swerveSubsystem) {
+    public GoStraight(SwerveSubsystem m_swerveSubsystem) {
 
         Field2d m_field = new Field2d();
 
@@ -31,7 +29,7 @@ public class GoStraightAndSpin extends SequentialCommandGroup {
         PIDController yController = new PIDController(AutoConstants.kPYController, 0, 0);
         ProfiledPIDController thetaController = new ProfiledPIDController(
                 AutoConstants.kPThetaController, 0, 0, AutoConstants.kThetaControllerConstraints);
-        thetaController.enableContinuousInput(-180, 180);
+        thetaController.enableContinuousInput(-Math.PI, Math.PI);
 
         TrajectoryConfig trajectoryConfig = new TrajectoryConfig(
                 AutoConstants.kMaxSpeedMetersPerSecond,
@@ -39,15 +37,13 @@ public class GoStraightAndSpin extends SequentialCommandGroup {
                 .setKinematics(DriveConstants.kDriveKinematics);
 
         Trajectory trajectory = TrajectoryGenerator.generateTrajectory(
-                List.of(
-                        new Pose2d(0, 0, new Rotation2d(0)),
-                        new Pose2d(-2, 0, Rotation2d.fromDegrees(180))
-                ),
+                Arrays.asList(new Pose2d(), new Pose2d(2, 0, new Rotation2d())),
                 trajectoryConfig
         );
 
         m_field.getObject("trej").setTrajectory(trajectory);
         SmartDashboard.putData(m_field);
+        System.out.println(trajectory.getTotalTimeSeconds());
         SwerveControllerCommand swerveControllerCommand = new SwerveControllerCommand(
                 trajectory,
                 m_swerveSubsystem::getPose,
@@ -57,6 +53,10 @@ public class GoStraightAndSpin extends SequentialCommandGroup {
                 thetaController,
                 m_swerveSubsystem::setModuleStates,
                 m_swerveSubsystem);
-        addCommands(swerveControllerCommand, new InstantCommand(m_swerveSubsystem::stopModules));
+        addCommands(
+                new InstantCommand(()->m_swerveSubsystem.resetOdometry(trajectory.getInitialPose())),
+                swerveControllerCommand,
+                new InstantCommand(() -> m_swerveSubsystem.stopModules())
+        );
     }
 }
